# lugh

./: .env.deploy.example  .env.example  .env.prod.example  .env.staging.example  .gitignore  CLAUDE.md  Dockerfile  FEAT-003-TESTING.md  FEAT-008-mcp-client-integration.md  README.md  deploy-agent-pool.sh  deploy-swarm-coordination.sh  deploy.sh  dev-full-stack.sh  dev-local.sh  docker-compose.claude.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
.archon/: CLAUDE.md
.claude/: AGENT_CATALOGUE.md  AGENT_QUICKREF.md  GLOBAL_CLAUDE.md  HOOKS.md  OUTPUT_ROUTING.md  SKILL_MAPPINGS.md  chain-runner.py  checkpoints.py  context-generator.py  cost-report.py  daily-digest.py  git-workflow.sh  knowledge-base.py  project-generator.py  prompt-library.py  session-inspector.py
.claude/templates/fastapi/: Dockerfile  pyproject.toml
.claude/templates/fastapi/src/: main.py
.claude/templates/mcp-python/: README.md  pyproject.toml
.claude/templates/mcp-python/src/: server.py
.git-hooks/: prepare-commit-msg
.lugh/: CLAUDE.md
V1.1/: Dockerfile.agent  Dockerfile.orchestrator  README.md  TEST_PUSH.md  docker-compose.multi-agent.yml  package-lock.json  package.json  tsconfig.json
architecture/: DUAL_INSTANCE.md  MONITORING.md  SAVE_STATE.md
deploy/: .env.example  docker-compose.yml
docs/: BRANCH_CATALOG.md  CONSOLIDATION_PLAN.md  REPOSITORY_STRUCTURE.md  SAAS_READINESS_PLAN.md  architecture.md  cloud-deployment.md  configuration.md  deployment-setup.md  getting-started.md  github-secrets-setup.md  lugh-architecture.md  phone-vibecoding-v1.md  worktree-orchestration.md
features/: BACKLOG.md  FEAT-003-multi-agent-no-redis.md  FEAT-006-CHECKLIST.md  FEAT-006-README.md  (+1 more)
langgraph-service/: .env.example  Dockerfile  README.md  dev-local.sh  docker-compose.yml  pyproject.toml
langgraph-service/app/: __init__.py  config.py  main.py
langgraph-service/app/checkpointer/: __init__.py  postgres.py
langgraph-service/app/graph/: __init__.py  builder.py  state.py
langgraph-service/app/nodes/: __init__.py  execution_nodes.py  input_nodes.py  routing_nodes.py  swarm_nodes.py
langgraph-service/app/services/: __init__.py  redis_pubsub.py
langgraph-service/tests/: __init__.py  test_api.py  test_graph.py
(+256 files in other folders)
